added validation, filtering, searching and beautiful ui
