# todo-service/src/main/java/com/todo/todo_service/controller/TodoController.java
@@ -1,18 +1,19 @@
 package com.todo.todo_service.controller;
 
-import com.todo.todo_service.dto.TodoRequest;
-import com.todo.todo_service.dto.TodoResponse;
+import com.todo.todo_service.generated.api.TodoApi;
+import com.todo.todo_service.generated.model.*;
 import com.todo.todo_service.service.TodoService;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
 
 @RestController
-@RequestMapping("/api/todos")
-public class TodoController {
+public class TodoController implements TodoApi {
 
     private final TodoService todoService;
 
@@ -20,45 +21,46 @@ public class TodoController {
         this.todoService = todoService;
     }
 
-    @PostMapping
-    public ResponseEntity<TodoResponse> create(
-            @RequestHeader("X-User") String username,
-            @Valid @RequestBody TodoRequest request) {
-        return ResponseEntity.ok(todoService.createTodo(request, username));
+    @Override
+    public ResponseEntity<TodoResponse> createTodo(
+            @NotNull String xUser,
+            @Valid TodoRequest request) {
+        return ResponseEntity.ok(todoService.createTodo(request, xUser));
     }
 
-    @GetMapping
-    public ResponseEntity<List<TodoResponse>> getTodos(
-            @RequestHeader("X-User") String username) {
-        return ResponseEntity.ok(todoService.getTodosByUser(username));
+    @Override
+    public ResponseEntity<List<TodoResponse>> getFilteredTodos(
+            String xUser,
+            String status,
+            String search,
+            LocalDate startDate,
+            LocalDate endDate
+    ) {
+        return ResponseEntity.ok(todoService.getFilteredTodos(xUser, status, search, startDate, endDate));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<TodoResponse> update(
-            @RequestHeader("X-User") String username,
-            @PathVariable Long id,
-            @Valid @RequestBody TodoRequest request) {
-        return ResponseEntity.ok(todoService.updateTodo(id, request, username));
+    @Override
+    public ResponseEntity<TodoResponse> updateTodo(
+            @NotNull String xUser,
+            Integer id,
+            @Valid TodoRequest request) {
+        return ResponseEntity.ok(todoService.updateTodo(id, request, xUser));
     }
 
-    @PatchMapping("/{id}")
+    @Override
     public ResponseEntity<TodoResponse> toggleTodo(
-            @RequestHeader("X-User") String username,
-            @PathVariable Long id,
-            @RequestBody Map<String, Boolean> request) {
-
-        Boolean completed = request.get("completed");
-        if (completed == null) {
-            return ResponseEntity.badRequest().build();
-        }
-
-        return ResponseEntity.ok(todoService.toggleTodo(id, completed, username));
+            @NotNull String xUser,
+            Integer id,
+            @Valid ToggleTodoRequest toggleTodoRequest) {
+        Boolean completed = toggleTodoRequest.getCompleted();
+        return ResponseEntity.ok(todoService.toggleTodo(id, completed, xUser));
     }
 
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
+    @Override
+    public ResponseEntity<DeleteTodo200Response> deleteTodo(Integer id) {
         todoService.deleteTodo(id);
-        return ResponseEntity.ok().build();
+        DeleteTodo200Response res = new DeleteTodo200Response();
+        res.setMessage("Todo deleted successfully");
+        return ResponseEntity.ok(res);
     }
 }
